--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "pg": "^8.11.3"
   }
 }
