--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
+    "octokit": "^3.1.1",
     "pg": "^8.11.3"
   }
 }
