--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "nodemon": "^3.0.1",
     "octokit": "^3.1.1",
     "pg": "^8.11.3"
