--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +21,9 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "nodemon": "^3.0.1",
+    "npm": "^10.2.4",
     "octokit": "^3.1.1",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "start": "^5.1.0"
   }
 }
